--- a/src/style/utils/_mixins.scss
+++ b/src/style/utils/_mixins.scss
@@ -42,10 +42,10 @@
   }
 }
 
-@mixin image-2x($image, $width, $height) {
+@mixin image-2x($image/* , $width, $height */) {
   @media (min-resolution: 2dppx) {
     background-image: url($image);
-    background-size: $width $height;
+    //background-size: $width $height;
   }
 }
 
