--- a/src/style/utils/_mixins.scss
+++ b/src/style/utils/_mixins.scss
@@ -7,43 +7,50 @@
 //## 
 
 @mixin bp-xsmall {
-  @media screen and (min-width: $bp-xsmall) {
+  @media (min-width: $bp-xsmall) {
     @content;
   }
 }
 
 @mixin bp-small {
-  @media screen and (min-width: $bp-small) {
+  @media (min-width: $bp-small) {
     @content;
   }
 }
 
 @mixin bp-medium {
-  @media screen and (min-width: $bp-medium) {
+  @media (min-width: $bp-medium) {
     @content;
   }
 }
 
 @mixin bp-large {
-  @media screen and (min-width: $bp-large) {
+  @media (min-width: $bp-large) {
     @content;
   }
 }
 
 @mixin bp-xlarge {
-  @media screen and (min-width: $bp-xlarge) {
+  @media (min-width: $bp-xlarge) {
     @content;
   }
 }
 
 @mixin bp-xxlarge {
-  @media screen and (min-width: $bp-xxlarge) {
+  @media (min-width: $bp-xxlarge) {
     @content;
   }
 }
 
+// @mixin bp-low-dpi {
+//   @media (max-resolution: 192dpi) {
+//     @content;
+//   }
+// }
+
 @mixin image-2x($image/* , $width, $height */) {
-  @media (min-resolution: 2dppx) {
+  @media (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi) {
     background-image: url($image);
     //background-size: $width $height;
   }
