--- a/src/style/blocks/_main-menu.scss
+++ b/src/style/blocks/_main-menu.scss
@@ -50,7 +50,7 @@
   z-index: 1;
 }
 
-@media screen and (max-width: $bp-medium) {
+@media screen and (max-width: ($bp-medium - 1)) {
   .main-menu__list-item {
     background-color: $blue-base;
     border-top: 1px solid #9AC2DB;
@@ -66,7 +66,6 @@
       text-align: center;
       background-color: $white;
       border: none;
-      //box-shadow: 0 -2px 5px -1px rgba(0, 0, 0, 0.2);
       box-shadow: 0 -3px 5px -2px rgba(0, 0, 0, 0.2);
     }
       
