Blocks: intro, single-promo, features-list

--- a/src/style/base/_scaffolding.scss
+++ b/src/style/base/_scaffolding.scss
@@ -18,6 +18,7 @@ body {
   line-height: lh(40,18);
   font-family: $font-family-base;
   color: $text-color;
+  text-transform: uppercase;
 }
 
 // Links
