--- a/src/style/blocks/_blocks.scss
+++ b/src/style/blocks/_blocks.scss
@@ -3,11 +3,16 @@
 \*------------------------------------*/
 
 
-@import "btn";
-@import "grid";
-@import "page";
-@import "main-header";
-@import "main-menu";
-@import "headline";
+@import 'btn';
+@import 'grid';
+@import 'page';
+@import 'main-header';
+@import 'main-menu';
+@import 'headline';
+@import 'intro';
+@import 'single-promo';
+@import 'index-content';
+@import 'features-list';
+
 
 
