--- a/src/style/blocks/_headline.scss
+++ b/src/style/blocks/_headline.scss
@@ -1,35 +1,36 @@
 .headline {
-	position: relative;
-	box-sizing: border-box;
-	height: 390px;
-	padding-top: 47px;
-	background-image: url('../pic/photo-background@1x.jpg');
-	background-repeat: no-repeat;
-	@include image-2x('../pic/photo-background@2x.jpg');
-	background-position: 50% 0;
-	background-size: 765px 512px;
+  position: relative;
+  box-sizing: border-box;
+  height: 390px;
+  padding-top: 47px;
+  background-color: #E1EFF8;
+  background-image: url('../pic/photo-background@1x.jpg');
+  background-repeat: no-repeat;
+  @include image-2x('../pic/photo-background@2x.jpg');
+  background-position: 50% 0;
+  background-size: 765px 512px;
 
-	&:after {
-		content: '';
-		position: absolute;
-		bottom: 0;
-		display: block;
-		width: 100%;
-		height: 57px;
-		background: url('../img/white-border.png') no-repeat;
-		background-position: 50%;
-	}
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 57px;
+    background: url('../img/white-border.png') no-repeat;
+    background-position: 50%;
+  }
 
-	& svg {
-		display: block;
-		width: 100%;
-		height: 100%;
-	}
+  & svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 
 .headline__sub-title {
-	margin: 0 auto;
+  margin: 0 auto;
 }
 
 
@@ -37,31 +38,31 @@
 .headline__sub-title-second-row,
 .headline__main-title,
 .headline__quote {
-	display: block;
+  display: block;
 }
 
 
 .headline__sub-title-first-row {
-	height: 35px;
-	margin-bottom: 8px;
-	fill: $blue-base;
+  height: 35px;
+  margin-bottom: 8px;
+  fill: $blue-base;
 }
 
 
 .headline__sub-title-second-row {
-	height: 22px;
-	margin-bottom: 60px;
-	fill: $brown-base;
+  height: 22px;
+  margin-bottom: 60px;
+  fill: $brown-base;
 }
 
 
 .headline__main-title{
-	height: 48px;
-	margin-bottom: 67px;
-	fill: $white;
+  height: 48px;
+  margin-bottom: 67px;
+  fill: $white;
 }
 
 .headline__quote {
-	height: 55px;
-	fill: $white;
+  height: 55px;
+  fill: $white;
 }
