--- a/src/style/utils/_mixins.scss
+++ b/src/style/utils/_mixins.scss
@@ -7,37 +7,37 @@
 //## 
 
 @mixin bp-xsmall {
-  @media (min-width: $bp-xsmall) {
+  @media (min-width: #{$bp-xsmall}px) {
     @content;
   }
 }
 
 @mixin bp-small {
-  @media (min-width: $bp-small) {
+  @media (min-width: #{$bp-small}px) {
     @content;
   }
 }
 
 @mixin bp-medium {
-  @media (min-width: $bp-medium) {
+  @media (min-width: #{$bp-medium}px) {
     @content;
   }
 }
 
 @mixin bp-large {
-  @media (min-width: $bp-large) {
+  @media (min-width: #{$bp-large}px) {
     @content;
   }
 }
 
 @mixin bp-xlarge {
-  @media (min-width: $bp-xlarge) {
+  @media (min-width: #{$bp-xlarge}px) {
     @content;
   }
 }
 
 @mixin bp-xxlarge {
-  @media (min-width: $bp-xxlarge) {
+  @media (min-width: #{$bp-xxlarge}px) {
     @content;
   }
 }
