--- a/src/style/blocks/_headline.scss
+++ b/src/style/blocks/_headline.scss
@@ -17,7 +17,7 @@
     display: block;
     width: 100%;
     height: 57px;
-    background: url('../img/white-border.png') no-repeat;
+    background: url('../img/white-border.svg') no-repeat;
     background-position: 50%;
   }
 
