--- a/src/style/blocks/_main-menu.scss
+++ b/src/style/blocks/_main-menu.scss
@@ -130,8 +130,11 @@
 
 .logo {
   display: inline-block;
+  width: 137px;
   height: 70px;
   padding: 0;
+  background-image: url('../img/logo-triangle.svg');
+  background-repeat: no-repeat;
 }
 
 
