--- a/src/style/utils/_utils.scss
+++ b/src/style/utils/_utils.scss
@@ -2,7 +2,7 @@
     #UTILS
 \*------------------------------------*/
 
-@import "variables";
-@import "mixins";
-@import "functions";
-@import "helpers";
+@import 'variables';
+@import 'mixins';
+@import 'functions';
+@import 'helpers';
