--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -2,5 +2,6 @@
     #BASE
 \*------------------------------------*/
 
-@import "scaffolding";
-@import "typography";
+
+@import 'scaffolding';
+@import 'typography';
