--- a/src/style/blocks/_blocks.scss
+++ b/src/style/blocks/_blocks.scss
@@ -2,17 +2,25 @@
     #BLOCKS
 \*------------------------------------*/
 
-
+		      
 @import 'btn';
 @import 'grid';
 @import 'page';
 @import 'main-header';
 @import 'main-menu';
+@import 'logo';
 @import 'headline';
 @import 'intro';
 @import 'single-promo';
 @import 'index-content';
 @import 'features-list';
+@import 'promo-list';
+@import 'search-hotel';
+@import 'map-footer';
+@import 'main-footer';
+@import 'search-hotel-popup';
+@import 'social-links-list';
+@import 'copyright';
 
 
 
