--- a/src/style/blocks/_intro.scss
+++ b/src/style/blocks/_intro.scss
@@ -8,15 +8,15 @@
 
 .intro__title {
   margin-bottom: 30px;
-	font-weight: bold;
-  font-size: rem(18);
-  line-height: lh(26,18);
+  font-weight: bold;
+  font-size: calc-rem(18);
+  line-height: calc-lh(26,18);
 }
 
 
 .intro__text {
   margin-bottom: 5px;
-	font-weight: normal;
-  font-size: rem(14);
-  line-height: lh(26,14);
+  font-weight: normal;
+  font-size: calc-rem(14);
+  line-height: calc-lh(26,14);
 }
