--- a/src/style/blocks/_page.scss
+++ b/src/style/blocks/_page.scss
@@ -2,5 +2,5 @@
   max-width: 1200px;
   margin: 0 auto;
   background-color: $white;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px -5px 15px 0px;
+  box-shadow: $shadow;
 }
