--- a/src/style/blocks/_search-hotel-popup.scss
+++ b/src/style/blocks/_search-hotel-popup.scss
@@ -68,6 +68,8 @@
     border-top: 2px solid $gray-light;
     border-right: 2px solid $gray-light;
     border-bottom: 2px solid $gray-light;
+    background-color: $gray-light; 
+    
 
     & > svg {
       width: 20px;
