--- a/src/style/blocks/_search-hotel-popup.scss
+++ b/src/style/blocks/_search-hotel-popup.scss
@@ -60,8 +60,9 @@
     position: absolute;
     right: 0;
     bottom: 0;
+    box-sizing: border-box;
     width: 36px;
-    height: 34px;
+    height: 38px;
     cursor: pointer;
     fill: #B2B2B2;
     border-top: 2px solid $gray-light;
@@ -183,6 +184,7 @@
     position: relative;
     margin: 0;
     margin-bottom: 25px;
+    overflow: hidden;
 
 
     &:last-of-type {
