--- a/src/style/blocks/_search-hotel-popup.scss
+++ b/src/style/blocks/_search-hotel-popup.scss
@@ -121,6 +121,7 @@
 
     &--date {
       width: 100%;
+      height: 38px;
       box-sizing: border-box;
       padding: 6.5px 10px;
       padding-right: 38px;
