--- a/src/style/blocks/_promo-list.scss
+++ b/src/style/blocks/_promo-list.scss
@@ -1,16 +1,35 @@
 .promo-list {
+  height: 256px;
   padding: 0 calc-percent(20, $bp-xsmall);
   text-align: center;
   background-color: #EEEEEE;
-  
 
-  &__item {
-    padding-top: 30px;
+
+  @include bp-medium {
+    padding: 0;
+  }
+
+
+  &__wrapper{
     border-bottom: 1px solid #D6D6D6;
 
 
     &:last-child {
       border: none;
+    }
+
+    @include bp-medium {
+      border: none;
+    }
+  }
+
+  &__item {
+    padding-top: 30px;
+
+    @include bp-medium {
+      padding-top: 45px;
+      padding-left: calc-percent(45, 256);
+      padding-right: calc-percent(45, 256);
     }
   }
 
@@ -20,6 +39,10 @@
     font-weight: bold;
     font-size: calc-rem(18);
     line-height: calc-lh(26,18);
+
+    @include bp-medium {
+      font-size: calc-rem(21);
+    }
   }
 
   &__number,
