--- a/src/style/blocks/_features-list.scss
+++ b/src/style/blocks/_features-list.scss
@@ -3,8 +3,18 @@
   padding-left: calc-percent(68,$bp-xsmall);
   padding-right: calc-percent(40,$bp-xsmall);
 
+  @include bp-medium {
+    padding: 0;
+    text-align: center;
+  }
+
   &__item {
     margin-bottom: 40px;
+
+    @include bp-medium {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
   }
 
   &__title {
@@ -13,6 +23,10 @@
     font-weight: bold;
     font-size: calc-rem(18);
     line-height: calc-lh(26,18);
+
+    @include bp-medium {
+      font-size: calc-rem(21);
+    }
   }
 
   &__icon {
@@ -29,6 +43,15 @@
       display: block;
       width: 100%;
       height: 100%;
+    }
+
+    @include bp-medium {
+      position: initial;
+      width: 75px;
+      height: 75px;
+      margin: 0 auto;
+      padding-top: 60px;
+      padding-bottom: 30px;
     }
   }
 
