--- a/src/style/blocks/_grid.scss
+++ b/src/style/blocks/_grid.scss
@@ -19,24 +19,19 @@
       lost-column: 1;
     }
 
-    &__medium-col-1-6 {
-      lost-column: (1/6) (0) (0);
+    &__medium-col-1-3 {
+      lost-column: (1/3) (0) (0);
     }
 
-    &__medium-col-2-6 {
-      lost-column: (2/6) (0) (0);
+    &__medium-col-2-3 {
+      lost-column: (2/3) (0) (0);
     }
 
-    &__medium-col-3-6 {
-      lost-column: (3/6) (0) (0);
+    &__medium-right-move-2-3 {
+      lost-move: (2/3) (0) (0);
     }
-
-    &__medium-col-4-6 {
-      lost-column: (4/6) (0) (0);
-    }
-
-    &__medium-col-5-6 {
-      lost-column: (5/6) (2) (0);
+    &__medium-left-move-1-3 {
+      lost-move: (-1/3) (0) (0);
     }
   }
 
