--- a/src/style/blocks/_single-promo.scss
+++ b/src/style/blocks/_single-promo.scss
@@ -11,6 +11,10 @@
     height: 37px;
     background: url('../img/white-border--down.svg') no-repeat;
     background-position: 50%;
+
+    @include bp-medium {
+      content: none;
+    }
   }
 
   &__title {
@@ -21,6 +25,19 @@
     font-size: calc-rem(18);
     line-height: calc-lh(26,18);
     color: inherit;
+
+    @include bp-medium {
+      font-size: calc-rem(21);
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+
+    @include bp-large {
+      font-size: calc-rem(21);
+      padding-top: 50px;
+      padding-left: 80px;
+      padding-right: 80px;
+    }
   }
 
   &__number {
@@ -31,6 +48,11 @@
   &__description {
     padding: 0 25px;
     margin-bottom: 45px;
+
+    @include bp-medium {
+      margin-bottom: 0;
+      padding: 0 calc-percent(45, 256);
+    }
   }
 
   &__number,
