--- a/src/style/blocks/_promo-list.scss
+++ b/src/style/blocks/_promo-list.scss
@@ -1,5 +1,5 @@
 .promo-list {
-  height: 256px;
+  min-height: 256px;
   padding: 0 calc-percent(20, $bp-xsmall);
   text-align: center;
   background-color: #EEEEEE;
