--- a/src/style/blocks/_map-footer.scss
+++ b/src/style/blocks/_map-footer.scss
@@ -2,4 +2,11 @@
   position: relative;
   height: 600px;
   background-color: $gray-light;
+
+
+  &__main-footer {
+    position: absolute;
+    bottom: 0;
+    padding-top: 30px;
+  }
 }
