--- a/src/style/utils/_functions.scss
+++ b/src/style/utils/_functions.scss
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-    #UTILS - FUNCTIONS
+  #UTILS - FUNCTIONS
 \*------------------------------------*/
 
 
@@ -16,4 +16,36 @@
 // Calculate percentage width
 @function calc-percent($pixels, $context) {
   @return ($pixels / $context) * 100%;
+}
+
+
+// Gets an attribute from the sass map
+
+$svg-sprite: map-get($svg-icons, svg-sprite) !default;
+
+@function sprite-attr($icon, $attr) {
+  $newIcon: map-get($svg-icons, $icon);
+  @if $newIcon == null {
+    @warn "Can't find an icon with the name #{$icon}";
+  }
+  @return map-get($newIcon, $attr);
+}
+
+@function icon-attr($icon) {
+  $attr: (
+    width: sprite-attr($icon, width),
+    height: sprite-attr($icon, height),
+    x: sprite-attr($icon, backgroundX),
+    y: sprite-attr($icon, backgroundY)
+  );
+
+  @return $attr;
+}
+
+
+// Sets background image 
+%svgSprite {
+  display: inline-block;
+  background-image: url(map-get($svg-sprite, svgPath));
+  background-size: map-get($svg-sprite, width) map-get($svg-sprite, height);
 }
