--- a/src/style/utils/_utils.scss
+++ b/src/style/utils/_utils.scss
@@ -3,6 +3,7 @@
 \*------------------------------------*/
 
 @import 'variables';
-@import 'mixins';
+@import 'svg-sprite'; 
 @import 'functions';
+@import 'mixins';
 @import 'helpers';
