--- a/src/style/blocks/_blocks.scss
+++ b/src/style/blocks/_blocks.scss
@@ -2,7 +2,7 @@
     #BLOCKS
 \*------------------------------------*/
 
-		      
+     
 @import 'btn';
 @import 'grid';
 @import 'page';
@@ -21,5 +21,9 @@
 @import 'main-footer';
 @import 'search-hotel-popup';
 @import 'social-links-list';
-
-
+@import 'widgets';
+@import 'catalog';
+@import 'stars-raiting.scss';
+@import 'sorting';
+@import 'sort-by';
+@import 'filter';
