--- a/src/style/blocks/_btn.scss
+++ b/src/style/blocks/_btn.scss
@@ -4,8 +4,8 @@
   padding: 3px 15px;
   font-weight: bold;
   font-family: $font-family-base;
-  font-size: calc-rem(18);
-  line-height: calc-lh(26,18);
+  font-size: calc-rem(14);
+  line-height: calc-lh(21,14);
   text-transform: uppercase;
   text-decoration: none;
   vertical-align: top;
@@ -14,6 +14,7 @@
   border: none;
   outline: none;
   cursor: pointer;
+  @include transition-all;
 
 
   &--primary {
