--- a/src/style/blocks/_copyright.scss
+++ b/src/style/blocks/_copyright.scss
@@ -20,7 +20,7 @@
     padding: 0 12px;
     font-size: 0;
     vertical-align: middle;
-
+    @include transition-all;
 
     &:hover {
       fill: $blue-base;
