--- a/src/style/blocks/_grid.scss
+++ b/src/style/blocks/_grid.scss
@@ -8,6 +8,12 @@
   lost-utility: clearfix;
   width: 100%;
   
+  @include bp-zero {
+    &__zero-col-1-2 {
+      lost-column: (1/2) (0) (0);
+    }
+  }
+
   @include bp-xsmall {
     &__xsmall-col-1-2 {
       lost-column: (1/2) (0) (0);
@@ -26,10 +32,19 @@
     &__medium-col-2-3 {
       lost-column: (2/3) (0) (0);
     }
+    
+    &__medium-col-1-6 {
+      lost-column: (1/6) (0) (0);
+    }
+
+    &__medium-col-5-6 {
+      lost-column: (5/6) (0) (0);
+    }
 
     &__medium-right-move-2-3 {
       lost-move: (2/3) (0) (0);
     }
+
     &__medium-left-move-1-3 {
       lost-move: (-1/3) (0) (0);
     }
