--- a/src/style/blocks/_search-hotel.scss
+++ b/src/style/blocks/_search-hotel.scss
@@ -11,7 +11,7 @@
     padding-bottom: 20px;
     font-weight: bold;
     font-size: calc-rem(21);
-    line-height: calc-lh(26,21);
+    line-height: calc-lh(26, 21);
 
     @include bp-medium {
       font-size: calc-rem(30);
