Fixed some ui elements

--- a/src/style/blocks/_sorting.scss
+++ b/src/style/blocks/_sorting.scss
@@ -23,8 +23,10 @@
     vertical-align: bottom;
 
     &-value {
-      display: inline-block;
-      width: 28px;
+      @include bp-medium {
+        display: inline-block;
+        width: 28px;
+      }
     }
   }
 
