--- a/src/style/blocks/_blocks.scss
+++ b/src/style/blocks/_blocks.scss
@@ -2,7 +2,8 @@
     #BLOCKS
 \*------------------------------------*/
 
-     
+
+@import 'preloader';     
 @import 'btn';
 @import 'grid';
 @import 'page';
