--- a/src/style/base/_scaffolding.scss
+++ b/src/style/base/_scaffolding.scss
@@ -37,11 +37,11 @@ a {
 }
 
 /* Disable Animate.css for small devices, tablets */
-@media only screen and (max-width : 768px) {
-  .animated {
-    transition-property: none !important;
-    transform: none !important;
-    animation: none !important;
-  }
-}
+// @media only screen and (max-width : 768px) {
+//   .animated {
+//     transition-property: none !important;
+//     transform: none !important;
+//     animation: none !important;
+//   }
+// }
 
