--- a/src/style/blocks/_blocks.scss
+++ b/src/style/blocks/_blocks.scss
@@ -12,6 +12,8 @@
 @import 'logo';
 @import 'headline';
 @import 'intro';
+
+@import 'posts-list';
 @import 'single-promo';
 @import 'index-content';
 @import 'features-list';
